bin/tests/snapshots/inherit_first__63b8c6369a6886adf8b9e4adc19b6767_fix.snap
---
source: bin/tests/inherit_first.rs
---
{
  enable = true;

  inherit slugifier;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,5 @@
 {
+  inherit slugifier;
+
   enable = true;
-
-  inherit slugifier;
 }
