bin/tests/snapshots/inherit_first__63b8c6369a6886adf8b9e4adc19b6767_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
{
  enable = true;

  inherit slugifier;
}
---
<temp_file_path>>4:3:W:38:[inherit_first] `inherit` should come before the assignments above it
