bin/tests/snapshots/inherit_first__63b8c6369a6886adf8b9e4adc19b6767_lint_json.snap
---
source: bin/tests/inherit_first.rs
---
{
  enable = true;

  inherit slugifier;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_first",
      "note": "`inherit` is not at the top of the set",
      "code": 38,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 21
            }
          },
          "message": "`inherit` should come before the assignments above it",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 2
              }
            },
            "fix": "{\n  inherit slugifier;\n\n  enable = true;\n}"
          }
        }
      ]
    }
  ]
}
