bin/tests/snapshots/inherit_first__63b8c6369a6886adf8b9e4adc19b6767_lint_stderr.snap
---
source: bin/tests/inherit_first.rs
---
{
  enable = true;

  inherit slugifier;
}
---
[inherit_first] Warning: `inherit` is not at the top of the set
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   inherit slugifier;
   │   ─────────┬────────  
   │            ╰────────── inherit should come before the assignments above it
───╯
