bin/tests/snapshots/inherit_first__b0cb16c88ded78c8ecbe5dc761d0c462_fix.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  apple = true;
  yak = true;
  inherit (pkgs) zebra;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,8 @@
 {
   inherit lib;
+
+  inherit (pkgs) zebra;
+
   apple = true;
   yak = true;
-  inherit (pkgs) zebra;
 }
