bin/tests/snapshots/inherit_first__b0cb16c88ded78c8ecbe5dc761d0c462_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  apple = true;
  yak = true;
  inherit (pkgs) zebra;
}
---
<temp_file_path>>3:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
<temp_file_path>>5:3:W:38:[inherit_first] `inherit` should come before the assignments above it
