bin/tests/snapshots/inherit_first__b0cb16c88ded78c8ecbe5dc761d0c462_lint_json.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  apple = true;
  yak = true;
  inherit (pkgs) zebra;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 16
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 6,
                "column": 2
              }
            },
            "fix": "{\n  inherit lib;\n\n  apple = true;\n  yak = true;\n  inherit (pkgs) zebra;\n}"
          }
        }
      ]
    },
    {
      "name": "inherit_first",
      "note": "`inherit` is not at the top of the set",
      "code": 38,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 5,
              "column": 3
            },
            "to": {
              "line": 5,
              "column": 24
            }
          },
          "message": "`inherit` should come before the assignments above it",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 6,
                "column": 2
              }
            },
            "fix": "{\n  inherit lib;\n  inherit (pkgs) zebra;\n  apple = true;\n  yak = true;\n}"
          }
        }
      ]
    }
  ]
}
