bin/tests/snapshots/inherit_first__b0cb16c88ded78c8ecbe5dc761d0c462_lint_stderr.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  apple = true;
  yak = true;
  inherit (pkgs) zebra;
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   apple = true;
   │   ──────┬──────  
   │         ╰──────── a blank line should follow the inherit above
───╯
[inherit_first] Warning: `inherit` is not at the top of the set
   ╭─[ <temp_file_path>:5:3 ]
   │
 5 │   inherit (pkgs) zebra;
   │   ──────────┬──────────  
   │             ╰──────────── inherit should come before the assignments above it
───╯
